# ColocAnalyse

./: CoLysoLisation.ijm  Coloc2Analyse.py  ColocCompare.py  ColocPlot.py  CountNDs.py  NewSimulations.py  README.md  SimulateNDs.py  SimulationActive.py  SimulationsFcns.py  TryBounding.py  TryPlotting.py  WelchTest.py  pyproject.toml
conf/: config_sim_nds.yaml
outputs/2024-12-12/13-39-10/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-12/13-39-20/.hydra/: hydra.yaml
outputs/2024-12-12/13-39-36/.hydra/: hydra.yaml
outputs/2024-12-12/13-40-00/.hydra/: config.yaml  hydra.yaml
outputs/2024-12-12/13-43-43/.hydra/: hydra.yaml
outputs/2024-12-12/13-43-53/.hydra/: hydra.yaml
outputs/2024-12-12/13-44-56/.hydra/: hydra.yaml
outputs/2024-12-12/13-46-25/.hydra/: hydra.yaml
outputs/2024-12-12/13-48-23/.hydra/: hydra.yaml
outputs/2024-12-12/13-54-07/.hydra/: hydra.yaml
outputs/2024-12-12/13-54-39/.hydra/: hydra.yaml
outputs/2024-12-12/13-55-51/.hydra/: hydra.yaml
outputs/2024-12-12/13-56-17/.hydra/: hydra.yaml
outputs/2024-12-12/13-58-31/.hydra/: hydra.yaml
outputs/2024-12-12/14-01-29/.hydra/: hydra.yaml
outputs/2024-12-26/14-38-36/.hydra/: hydra.yaml
outputs/2025-01-03/09-01-18/.hydra/: hydra.yaml
outputs/2025-01-03/09-34-53/.hydra/: hydra.yaml
outputs/2025-01-03/09-38-15/.hydra/: hydra.yaml
outputs/2025-01-03/09-38-38/.hydra/: config.yaml  hydra.yaml
outputs/2025-01-03/09-39-04/.hydra/: hydra.yaml
outputs/2025-01-03/09-39-20/.hydra/: hydra.yaml
outputs/2025-01-03/09-42-02/.hydra/: hydra.yaml
(+24 files in other folders)
